--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -14,15 +14,18 @@
         <img id="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo">
     </div>
     <nav>
-        <ul class="nav-links">
-            <li><a href="#">Studier</a></li>
-            <li><a href="#">Forskningen vår</a></li>
-            <li><a href="#">Universitetsbibliotek</a></li>
-            <li><a href="#">For studenter</a></li>
-            <li><a href="activity.html">Activity</a></li>
-            <li><a href="../index.html">Matematisk Modellering</a></li>
-            <li><a href="github.html">GitHub</a></li>
-        </ul>
+        <div class="dropdown" style="float:right;">
+            <button class="dropbtn"><i class="fa fa-bars"></i></button>
+            <div class="dropdown-content">
+                 <a href="#">Studier</a> 
+                 <a href="#">Forskningen vår</a> 
+                 <a href="#">Universitetsbibliotek</a> 
+                 <a href="#">For studenter</a> 
+                 <a href="other-pages/activity.html">Activity</a> 
+                 <a href="other-pages/accessibility.html">Accessibility</a> 
+                 <a href="other-pages/github.html">GitHub</a> 
+            </div>
+          </div>
     </nav>
 </header>
 
