fixed links in header nav buttons

--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -21,9 +21,9 @@
                  <a href="#">Forskningen vår</a> 
                  <a href="#">Universitetsbibliotek</a> 
                  <a href="#">For studenter</a> 
-                 <a href="other-pages/activity.html">Activity</a> 
-                 <a href="other-pages/accessibility.html">Accessibility</a> 
-                 <a href="other-pages/github.html">GitHub</a> 
+                 <a href="activity.html">Activity</a> 
+                 <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a> 
+                 <a href="github.html">GitHub</a> 
             </div>
           </div>
     </nav>
