added box-shadows to various places and fixed a few things with the hamburger menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="dropdown" style="float:right;">
             <button class="dropbtn"><i class="fa fa-bars"></i></button>
             <div class="dropdown-content">
-                 <a href="#">Studier</a> 
+                 <a href="#">Studier</a>
                  <a href="#">Forskningen vår</a> 
                  <a href="#">Universitetsbibliotek</a> 
                  <a href="#">For studenter</a> 
@@ -255,7 +255,7 @@
                 <script src="javascript/index-tabs"></script>
             </section>
 
-            <hr>
+            <hr id="separator">
 
             <section id="more-content">
                 <div class=more-content-boxes>
