--- a/index.html
+++ b/index.html
@@ -925,6 +925,7 @@
                         </a>
                     </section>
 
+                    <h3><a id="tabcontent-btt" href=#course-info-tabs>Back to top</a></h3>
             </section>
 
             </div>
