changed hover colors of course structure boxes, also changed line height

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Matematisk Modelering</title>
+    <title>Matematisk modellering og datavitenskap – ingeniør - OsloMet</title>
 </head>
 <header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
@@ -932,7 +932,21 @@
 
             <div id="Hvordan-foregår-undervisningen?" class="tabcontent">
                 <h2>Hvordan foregår undervisningen?</h2>
-                <p>Tokyo is the capital of Japan.</p>
+                <p>Undervisningen er en kombinasjon av
+                <ul>
+                    <li>prosjektarbeid</li>
+                    <li>workshop</li>
+                    <li>presentasjoner</li>
+                    <li>veiledninger</li>
+                    <li>diskusjoner og refleksjoner</li>
+                    <li>forelesninger</li>
+                    <li>selvstudier</li>
+                    <li>gruppearbeid</li>
+                    <li>arbeidslivsrelevant bacheloroppgave</li>
+                </ul>
+                For å gjennomføre studiet på normert tid, må du regne med å bruke om lag 40 timer per uke på
+                studierelatert arbeid gjennom hele semesteret.
+                </p>
             </div>
 
             <div id="Hva-koster-det?" class="tabcontent">
