ish finished the whole tab section, only last tab that is not yet mobile friendly.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <li>15. april: ordinær søknadsfrist</li>
                         <li>1. mars: frist for enkelte søkere</li>
                     </ul>
-                    <a class="course-info-links"
+                    <a class="https://student.oslomet.no/semesteravgifthttps://student.oslomet.no/semesteravgift"
                         href="https://www.oslomet.no/studier/soknad-og-opptak/opptak-til-bachelor-aarsstudier">Mer om å
                         søke
                         på bachelor.</a>
@@ -925,7 +925,9 @@
                         </a>
                     </section>
 
-                    <h3><a id="tabcontent-btt" href=#course-info-tabs>Back to top</a></h3>
+                    <a id="tabcontent-btt" href="#course-info-tabs"><button>
+                            <h3>Back to top</h3>
+                        </button></a>
             </section>
 
             </div>
@@ -951,22 +953,50 @@
 
             <div id="Hva-koster-det?" class="tabcontent">
                 <h2>Hva koster det?</h2>
-                <p>Tokyo is the capital of Japan.</p>
+                <p>Det er ikke studieavgift på dette studiet. <a class="course-info-links"
+                        href="https://student.oslomet.no/semesteravgift">Du
+                        betaler en semesteravgift hvert semester (student.oslomet.no).</a></p>
             </div>
 
             <div id="Hva-kan-du-jobbe-som?" class="tabcontent">
                 <h2>Hva kan du jobbe som?</h2>
-                <p>Tokyo is the capital of Japan.</p>
+                <p>Med dette studiet får du IT-kompetanse som er etterspurt i arbeidslivet, særlig om du velger
+                    spesialiseringene vitenskapelige beregninger eller statistiske og datadrevne metoder.
+                    <br>
+                    Spesialiseringen i matematikk og fysikk retter seg mer mot videre studier, men også her får du
+                    etterspurt kompetanse i arbeidslivet etter bachelorstudiet.
+                    <br>
+                    Matematisk modellering og datavitenskap blir stadig viktigere som basisgrunnlag, i for eksempel
+                    beregninger knyttet til klima, forsikring og finans, og datadrevne metoder for verdiskaping.
+                    <br>
+                    Datadrevne metoder og maskinlæring er i dag svært mye brukt i arbeidslivet.
+                </p>
             </div>
 
             <div id="Utveksling" class="tabcontent">
                 <h2>Utveksling</h2>
-                <p>Tokyo is the capital of Japan.</p>
+                <p>Du kan dra på utveksling i femte semester.</p>
             </div>
 
+            <!-- currently not mobile friendly, pls fix -->
             <div id="Videre-studiemuligheter-ved-OsloMet" class="tabcontent">
                 <h2>Videre studiemuligheter ved OsloMet</h2>
-                <p>Tokyo is the capital of Japan.</p>
+                <a id="course-glance-container"
+                    href="https://www.oslomet.no/studier/tkd/anvendt-data-informasjonsteknologi">
+                    <div id="course-glance">
+                        <h3>Anvendt data- og informasjonsteknologi (ACIT)</h3>
+                        <div id="course-glance-points">
+                            <p>Masterprogram</p>
+                            <p>2 år</p>
+                            <p>Pilestredet i Oslo</p>
+                            <p>Heltid</p>
+                        </div>
+                    </div>
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 0 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a>
             </div>
 
             <script src="javascript/index-tabs"></script>
