fixed a few mistakes

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <li>15. april: ordinær søknadsfrist</li>
                         <li>1. mars: frist for enkelte søkere</li>
                     </ul>
-                    <a class="https://student.oslomet.no/semesteravgifthttps://student.oslomet.no/semesteravgift"
+                    <a class="more-info-links"
                         href="https://www.oslomet.no/studier/soknad-og-opptak/opptak-til-bachelor-aarsstudier">Mer om å
                         søke
                         på bachelor.</a>
@@ -962,13 +962,16 @@
                 <h2>Hva kan du jobbe som?</h2>
                 <p>Med dette studiet får du IT-kompetanse som er etterspurt i arbeidslivet, særlig om du velger
                     spesialiseringene vitenskapelige beregninger eller statistiske og datadrevne metoder.
-                    <br>
+                </p>
+                <p>
                     Spesialiseringen i matematikk og fysikk retter seg mer mot videre studier, men også her får du
                     etterspurt kompetanse i arbeidslivet etter bachelorstudiet.
-                    <br>
+                </p>
+                <p>
                     Matematisk modellering og datavitenskap blir stadig viktigere som basisgrunnlag, i for eksempel
                     beregninger knyttet til klima, forsikring og finans, og datadrevne metoder for verdiskaping.
-                    <br>
+                </p>
+                <p>
                     Datadrevne metoder og maskinlæring er i dag svært mye brukt i arbeidslivet.
                 </p>
             </div>
