--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,15 @@
                     <span id="icon" class="fa fa-info"></span>
                     <span>
                         <h4> More Info</h4>
-                        <p>
+                        <div class="more-info-tab">
+                            <button id="toggle-tab" class="more-info-tab-button">
+                                <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="2 1 20 20">
+                                    <path fill-rule="evenodd"
+                                        d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
+                                </svg>
+                            </button>
+                        </div>
+                        <div id="more-info-tab" class="more-info-tabcontent">
                             <a class="more-info-links" href="#">English</a><br>
                             <a class="more-info-links" href="#">Alumni</a><br />
                             <a class="more-info-links" href="#">Ansatteoversikt</a><br>
@@ -1174,7 +1182,8 @@
                             <a class="more-info-links" href="#">Pressekontakt</a><br>
                             <a class="more-info-links" href="#">Tilgjengelegheitserklæring</a><br>
                             <a class="more-info-links" href="#">Admin</a><br>
-                        </p>
+                        </div>
+                        <script src="javascript/index-tabs"></script>
                     </span>
                 </div>
             </div>
