changed footer more info, added search button in header, added link to homepage on logo in header

--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
 </head>
 <header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
-    <div class="img-container">
+    <a href="https://www.oslomet.no/" class="img-container"> 
         <img id="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
-    </div>
+    </a>
     <nav>
-        <div class="dropdown" style="float:right;">
+        <a id="search-button" href="https://www.oslomet.no/s?q"><i class="fa fa-search"></i></a>
+        <div class="dropdown">
             <button class="dropbtn"><i class="fa fa-bars"></i></button>
             <div class="dropdown-content">
-                <a href="#">Studier</a>
-                <a href="#">Forskningen vår</a>
-                <a href="#">Universitetsbibliotek</a>
-                <a href="#">For studenter</a>
+                <a href="https://www.oslomet.no/studier">Studier</a>
+                <a href="https://www.oslomet.no/forskning">Forskningen vår</a>
+                <a href="https://www.oslomet.no/om/samarbeid">Samarbeid</a>
+                <a href="https://www.oslomet.no/ub">Universitetsbibliotek</a>
+                <a href="https://www.oslomet.no/om">Om OsloMet</a>
+                <a href="https://www.oslomet.no/om/for-studenter">For studenter</a>
+                <a href="https://www.oslomet.no/om/kontakt">Kontakt</a>
                 <a href="other-pages/activity.html">Activity</a>
                 <a href="other-pages/accessibility.html">Accessibility</a>
                 <a href="other-pages/github.html">GitHub</a>
             </div>
         </div>
-
         </body>
 
 </html>
@@ -1164,24 +1167,25 @@
                         <h4> More Info</h4>
                         <div class="more-info-tab">
                             <button id="toggle-tab" class="more-info-tab-button">
-                                <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="2 1 20 20">
+                                <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                    viewBox="2 1 20 20">
                                     <path fill-rule="evenodd"
                                         d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
                                 </svg>
                             </button>
                         </div>
                         <div id="more-info-tab" class="more-info-tabcontent">
-                            <a class="more-info-links" href="#">English</a><br>
-                            <a class="more-info-links" href="#">Alumni</a><br />
-                            <a class="more-info-links" href="#">Ansatteoversikt</a><br>
-                            <a class="more-info-links" href="#">Arrangementsoversikt</a><br>
-                            <a class="more-info-links" href="#">For ansatte</a><br>
-                            <a class="more-info-links" href="#">For studenter</a><br>
-                            <a class="more-info-links" href="#">Ledige stillinger</a><br>
-                            <a class="more-info-links" href="#">Personvernerklæring og <br> informasjonskapslar</a><br>
-                            <a class="more-info-links" href="#">Pressekontakt</a><br>
-                            <a class="more-info-links" href="#">Tilgjengelegheitserklæring</a><br>
-                            <a class="more-info-links" href="#">Admin</a><br>
+                            <a class="more-info-links" href="https://www.oslomet.no/en">English</a><br>
+                            <a class="more-info-links" href="https://www.oslomet.no/alumni">Alumni</a><br />
+                            <a class="more-info-links" href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a><br>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a><br>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/for-ansatte">For ansatte</a><br>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/for-studenter">For studenter</a><br>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/ledige-stillinger">Ledige stillinger</a><br>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring og <br> informasjonskapslar</a><br>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a><br>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a><br>
+                            <a class="more-info-links" href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a><br>
                         </div>
                         <script src="javascript/index-tabs"></script>
                     </span>
