changed more-content links to use more-info-link class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
-    <a href="https://www.oslomet.no/" class="img-container"> 
+    <a href="https://www.oslomet.no/" class="img-container">
         <img id="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
     </a>
     <nav>
@@ -1012,17 +1012,19 @@
         <section id="more-content">
             <div class=more-content-boxes>
                 <h2>Studiested</h2>
-                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -5 24 24">
-                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                </svg>
-                <a href="https://www.oslomet.no/om/studiested-pilestredet"> Studiestedet Pilestredet</a>
+                <a class="more-info-links" href="https://www.oslomet.no/om/studiested-pilestredet"><svg
+                        class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 -5 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>Studiestedet Pilestredet</a>
             </div>
             <div class=more-content-boxes>
                 <h2>Spørsmål om utdannningen?</h2>
-                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
-                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                </svg>
-                <a href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student"> Har du spørsmål om
+                <a class="more-info-links" href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student"> <svg
+                        class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 -4 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>Har du spørsmål om
                     utdanningen, kontakt oss gjennom vårt kontaktskjema.</a>
             </div>
             <div class=more-content-boxes>
@@ -1033,7 +1035,8 @@
                     <h3>Kristoffer Herland Hellton</h3>
                     <p>førsteamanuensis</p>
                     <!-- hva er førsteamanuensis -->
-                    <p>+47 673 37 240 <span class="divider">| </span> kristoffer.hellton@oslomet.no</p>
+                    <p>+47 673 37 240 <span class="divider">| </span> <a
+                            href="mailto:kristoffer.hellton@oslomet.no">kristoffer.hellton@oslomet.no</a></p>
                 </div>
 
             </div>
@@ -1177,15 +1180,24 @@
                         <div id="more-info-tab" class="more-info-tabcontent">
                             <a class="more-info-links" href="https://www.oslomet.no/en">English</a><br>
                             <a class="more-info-links" href="https://www.oslomet.no/alumni">Alumni</a><br />
-                            <a class="more-info-links" href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a><br>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a><br>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a><br>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a><br>
                             <a class="more-info-links" href="https://www.oslomet.no/om/for-ansatte">For ansatte</a><br>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/for-studenter">For studenter</a><br>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/ledige-stillinger">Ledige stillinger</a><br>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring og <br> informasjonskapslar</a><br>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a><br>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a><br>
-                            <a class="more-info-links" href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a><br>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/for-studenter">For
+                                studenter</a><br>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/ledige-stillinger">Ledige
+                                stillinger</a><br>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring
+                                og <br> informasjonskapslar</a><br>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a><br>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a><br>
+                            <a class="more-info-links"
+                                href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a><br>
                         </div>
                         <script src="javascript/index-tabs"></script>
                     </span>
