changed course-suummary html structure and some of the px to em in style.

--- a/index.html
+++ b/index.html
@@ -78,14 +78,15 @@
                 </div>
             </section>
 
+            <hr class="separator">
+
             <section id="course-summary">
                 <h2>Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske
                     og samfunnsnyttige
                     oppgaver.
                 </h2>
-            </section>
 
-            <section id="course-info-tabs">
+                <section id="course-info-tabs">
                 </h2>
                 <div class="tab">
                     <button class="tablinks" onclick="openTab(event, 'Studiestart')">Studiestart</button>
@@ -931,6 +932,9 @@
                             <h3>Back to top</h3>
                         </button></a>
             </section>
+            </section>
+
+            
 
             </div>
 
@@ -1007,7 +1011,7 @@
             <script src="javascript/index-tabs"></script>
         </section>
 
-        <hr id="separator"> <!-- change padding of section instead of separator? -->
+        <hr class="separator">
 
         <section id="more-content">
             <div class=more-content-boxes>
