--- a/index.html
+++ b/index.html
@@ -78,8 +78,6 @@
                 </div>
             </section>
 
-            <hr class="separator">
-
             <section id="course-summary">
                 <h2>Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske
                     og samfunnsnyttige
@@ -985,7 +983,6 @@
                 <p>Du kan dra på utveksling i femte semester.</p>
             </div>
 
-            <!-- currently not mobile friendly, pls fix -->
             <div id="Videre-studiemuligheter-ved-OsloMet" class="tabcontent">
                 <h2>Videre studiemuligheter ved OsloMet</h2>
                 <a id="course-glance-container"
@@ -1045,100 +1042,118 @@
         </section>
         <section id="other-studies">
             <h2>Kanskje du også er interessert i disse?</h2>
-            <table id="studies">
-                <tr>
-                    <th colspan="4">
-                        <div class="header-row">
-                            <span>Studienavn</span>
-                            <span>Utdanningsgrad</span>
-                            <span>Studiested</span>
-                            <span>Omfang</span>
+            <div id="course-cards">
+                <a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi">
+                    <div id="course-glance">
+                        <h3>Anvendt Datateknologi</h3>
+                        <div id="course-glance-points">
+                            <p>Bachelorprogram</p>
+                            <p>Pilestredet i Oslo</p>
+                            <p>Heltid</p>
                         </div>
-                    </th>
-                </tr>
-                <tr>
-                    <td colspan="4">
-                        <a href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi" class="row-link">
-                            <span>Anvendt Datateknologi</span>
-                            <span>Bachelorprogram</span>
-                            <span>Pilestredet i Oslo</span>
-                            <span>Heltid</span>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="4">
-                        <a href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior" class="row-link">
-                            <span>Bioteknologi- og kjemiingeniør</span>
-                            <span>Bachelorprogram</span>
-                            <span>Pilestredet i Oslo</span>
-                            <span>Heltid</span>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="4">
-                        <a href="https://www.oslomet.no/studier/tkd/byggingenior" class="row-link">
-                            <span>Byggingeniør</span>
-                            <span>Bachelorprogram</span>
-                            <span>Pilestredet i Oslo</span>
-                            <span>Heltid</span>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="4">
-                        <a href="https://www.oslomet.no/studier/tkd/dataingenior" class="row-link">
-                            <span>Dataingeniør</span>
-                            <span>Bachelorprogram</span>
-                            <span>Pilestredet i Oslo</span>
-                            <span>Heltid</span>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="4">
-                        <a href="https://www.oslomet.no/studier/tkd/elektronikkingenior" class="row-link">
-                            <span>Elektronikkingeniør</span>
-                            <span>Bachelorprogram</span>
-                            <span>Pilestredet i Oslo</span>
-                            <span>Heltid</span>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="4">
-                        <a href="https://www.oslomet.no/studier/tkd/informasjonsteknologi" class="row-link">
-                            <span>Informasjonsteknologi</span>
-                            <span>Bachelorprogram</span>
-                            <span>Pilestredet i Oslo</span>
-                            <span>Heltid</span>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="4">
-                        <a href="https://www.oslomet.no/studier/tkd/maskiningenior" class="row-link">
-                            <span>Maskiningeniør</span>
-                            <span>Bachelorprogram</span>
-                            <span>Pilestredet i Oslo</span>
-                            <span>Heltid</span>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="4">
-                        <a href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior" class="row-link">
-                            <span>Tre-terminsordning til ingeniør</span>
-                            <span>Bachelorprogram</span>
-                            <span>Pilestredet i Oslo</span>
-                            <span>Heltid</span>
-                        </a>
-                    </td>
-                </tr>
-            </table>
+                    </div>
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 0 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a>
+                <a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior">
+                    <div id="course-glance">
+                        <h3>Bioteknologi- og kjemiingeniør</h3>
+                        <div id="course-glance-points">
+                            <p>Bachelorprogram</p>
+                            <p>Pilestredet i Oslo</p>
+                            <p>Heltid</p>
+                        </div>
+                    </div>
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 0 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a>
+                <a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/byggingenior">
+                    <div id="course-glance">
+                        <h3>Byggingeniør</h3>
+                        <div id="course-glance-points">
+                            <p>Bachelorprogram</p>
+                            <p>Pilestredet i Oslo</p>
+                            <p>Heltid</p>
+                        </div>
+                    </div>
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 0 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a>
+                <a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/dataingenior">
+                    <div id="course-glance">
+                        <h3>Dataingeiør</h3>
+                        <div id="course-glance-points">
+                            <p>Bachelorprogram</p>
+                            <p>Pilestredet i Oslo</p>
+                            <p>Heltid</p>
+                        </div>
+                    </div>
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 0 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a>
+                <a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/elektronikkingenior">
+                    <div id="course-glance">
+                        <h3>Elektronikkingeniør</h3>
+                        <div id="course-glance-points">
+                            <p>Bachelorprogram</p>
+                            <p>Pilestredet i Oslo</p>
+                            <p>Heltid</p>
+                        </div>
+                    </div>
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 0 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a><a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/informasjonsteknologi">
+                    <div id="course-glance">
+                        <h3>Informasjonsteknologi</h3>
+                        <div id="course-glance-points">
+                            <p>Bachelorprogram</p>
+                            <p>Pilestredet i Oslo</p>
+                            <p>Heltid</p>
+                        </div>
+                    </div>
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 0 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a><a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/maskiningenior">
+                    <div id="course-glance">
+                        <h3>Maskiningeniør</h3>
+                        <div id="course-glance-points">
+                            <p>Bachelorprogram</p>
+                            <p>Pilestredet i Oslo</p>
+                            <p>Heltid</p>
+                        </div>
+                    </div>
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 0 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a><a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior">
+                    <div id="course-glance">
+                        <h3>Tre-terminsordning til ingeniør</h3>
+                        <div id="course-glance-points">
+                            <p>Bachelorprogram</p>
+                            <p>Pilestredet i Oslo</p>
+                            <p>Heltid</p>
+                        </div>
+                    </div>
+                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                        viewBox="0 0 24 24">
+                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                    </svg>
+                </a>
+            </div>
         </section>
-    </section>
     </section>
 
     <!-- Footer Menu -->
