--- a/index.html
+++ b/index.html
@@ -988,6 +988,7 @@
                 <a id="course-glance-container"
                     href="https://www.oslomet.no/studier/tkd/anvendt-data-informasjonsteknologi">
                     <div id="course-glance">
+
                         <h3>Anvendt data- og informasjonsteknologi (ACIT)</h3>
                         <div id="course-glance-points">
                             <p>Masterprogram</p>
@@ -1195,26 +1196,26 @@
                             </button>
                         </div>
                         <div id="more-info-tab" class="more-info-tabcontent">
-                            <a class="more-info-links" href="https://www.oslomet.no/en">English</a><br>
-                            <a class="more-info-links" href="https://www.oslomet.no/alumni">Alumni</a><br />
+                            <a class="more-info-links" href="https://www.oslomet.no/en">English</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/alumni">Alumni</a>
                             <a class="more-info-links"
-                                href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a><br>
+                                href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a>
                             <a class="more-info-links"
-                                href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a><br>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/for-ansatte">For ansatte</a><br>
+                                href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/for-ansatte">For ansatte</a>
                             <a class="more-info-links" href="https://www.oslomet.no/om/for-studenter">For
-                                studenter</a><br>
+                                studenter</a>
                             <a class="more-info-links" href="https://www.oslomet.no/om/ledige-stillinger">Ledige
-                                stillinger</a><br>
+                                stillinger</a>
                             <a class="more-info-links"
                                 href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring
-                                og <br> informasjonskapslar</a><br>
+                                og <br> informasjonskapslar</a>
                             <a class="more-info-links"
-                                href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a><br>
+                                href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a>
                             <a class="more-info-links"
-                                href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a><br>
+                                href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
                             <a class="more-info-links"
-                                href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a><br>
+                                href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
                         </div>
                         <script src="javascript/index-tabs"></script>
                     </span>
