background and footer change, good or no?

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 </header>
 
 <body>
+    <div id="site-background"></div>
     <div class="video-container">
         <iframe src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483" allowfullscreen
             title="Oslomet Dataingeiør og matematisk modellering" loading="lazy">
