--- a/index.html
+++ b/index.html
@@ -1156,6 +1156,24 @@
                 </a>
             </div>
         </section>
+        <section id="studenthistorier">
+            <h2>Studenthistorier</h2>
+            <div id="studenthistorier-container">
+                <a href="https://www.oslomet.no/studier/studenthistorier/spa-fremtiden-matematikk-datavitenskap">
+                    <div id="text">
+                        <h2>Teknologi og design</h2>
+                        <h2>Spå fremtiden med matematikk og datavitenskap</h2>
+                        <p>Har du lyst til å finne ut hva som vil skje i fremtiden? Lær å bruke verktøy for å forutsi
+                            alt
+                            fra været og strømprisene til utviklingen i boligmarkedet.</p>
+                    </div>
+                    <img id="studenthistorier-image"
+                        src="https://www.oslomet.no/var/oslomet/storage/images/_aliases/xxxlarge/1/6/4/1/401461-1-nor-NO/613c6efdb147-matematikk_oslomet_smilefjes.jpg"
+                        alt="">
+                    <i id="link-chevron" class="fa fa-chevron-right" style="font-size:36px"></i>
+                </a>
+            </div>
+        </section>
     </section>
 
     <!-- Footer Menu -->
@@ -1211,8 +1229,7 @@
                             <a class="more-info-links"
                                 href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring
                                 og <br> informasjonskapslar</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a>
                             <a class="more-info-links"
                                 href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
                             <a class="more-info-links"
