--- a/index.html
+++ b/index.html
@@ -1156,10 +1156,12 @@
                 </a>
             </div>
         </section>
+
         <section id="studenthistorier">
             <h2>Studenthistorier</h2>
             <div id="studenthistorier-container">
-                <a href="https://www.oslomet.no/studier/studenthistorier/spa-fremtiden-matematikk-datavitenskap">
+                <a id="link-box-story"
+                    href="https://www.oslomet.no/studier/studenthistorier/spa-fremtiden-matematikk-datavitenskap">
                     <div id="text">
                         <h2>Teknologi og design</h2>
                         <h2>Spå fremtiden med matematikk og datavitenskap</h2>
@@ -1173,6 +1175,11 @@
                     <i id="link-chevron" class="fa fa-chevron-right" style="font-size:36px"></i>
                 </a>
             </div>
+            <a id="link-box-more-stories" href="https://www.oslomet.no/studier/studenthistorier">
+                <div>
+                    <h2>Flere studenthistorier</h2>
+                </div>
+            </a>
         </section>
     </section>
 
