--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,7 @@
                     <span id="icon" class="fa fa-map-marker"></span>
 
                     <span>
-                        <h4>Oslo Metropolitan University</h4>
+                        <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9"><h4>Oslo Metropolitan University</h4></a>
                         <p>Storbyuniversitetet</p>
                         Postboks 4, St. Olavs plass
                         0130 Oslo
