changed css on course-info-tab and changed back to top button to say "yilbake til toppen

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
                     </section>
 
                     <a id="tabcontent-btt" href="#course-info-tabs"><button>
-                            <h3>Back to top</h3>
+                            <h3>Tilbake til toppen</h3>
                         </button></a>
             </section>
 
