--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,7 @@
             <div id="studenthistorier-container">
                 <a id="link-box-story"
                     href="https://www.oslomet.no/studier/studenthistorier/spa-fremtiden-matematikk-datavitenskap">
-                    <div id="text">
+                    <div id="studenthistorier-text">
                         <h2>Teknologi og design</h2>
                         <h2>Spå fremtiden med matematikk og datavitenskap</h2>
                         <p>Har du lyst til å finne ut hva som vil skje i fremtiden? Lær å bruke verktøy for å forutsi
