--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <!--URL to film from https://www.oslomet.no/studier/tkd/matematisk-modellering-datavitenskap inspection -->
         </iframe>
     </div>
-    <section id="main">
+    <main>
         <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
         <section id="main-content">
             <h2>Bachelorprogram</h2>
@@ -1181,7 +1181,7 @@
                 </div>
             </a>
         </section>
-    </section>
+    </main>
 
     <!-- Footer Menu -->
     <footer id="footer">
