changed main-content from section to article

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </iframe>
     </div>
     <main>
-        <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
-        <section id="main-content">
+        <article id="main-content">
+            <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
             <h2>Bachelorprogram</h2>
             <section id="course-key-points">
                 <div class="detail-box">
@@ -1006,7 +1006,7 @@
             </div>
 
             <script src="javascript/index-tabs"></script>
-        </section>
+        </article>
 
         <hr class="separator">
 
