changed all sections that should be article to article

--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
 
         <hr class="separator">
 
-        <section id="more-content">
+        <article id="more-content">
             <div class=more-content-boxes>
                 <h2>Studiested</h2>
                 <a class="more-info-links" href="https://www.oslomet.no/om/studiested-pilestredet"><svg
@@ -1041,8 +1041,9 @@
                 </div>
 
             </div>
-        </section>
-        <section id="other-studies">
+        </article>
+
+        <article id="other-studies">
             <h2>Kanskje du også er interessert i disse?</h2>
             <div id="course-cards">
                 <a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi">
@@ -1155,9 +1156,9 @@
                     </svg>
                 </a>
             </div>
-        </section>
+        </article>
 
-        <section id="studenthistorier">
+        <article id="studenthistorier">
             <h2>Studenthistorier</h2>
             <div id="studenthistorier-container">
                 <a id="link-box-story"
@@ -1180,7 +1181,7 @@
                     <h2>Flere studenthistorier</h2>
                 </div>
             </a>
-        </section>
+        </article>
     </main>
 
     <!-- Footer Menu -->
