--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -55,12 +55,15 @@
                 <hr class="separator">
                 <h2>Sporing av koder</h2>
                 <p>Alle branches som blir lagd, kan lastes inn på hoved filen via "commits". Der kan 
-                    alle se hvem som har gjort hva lagt inn hva av koden, og det som er endret. 
+                    alle se hvem som har gjort hva på koden, og det som er endret. I tillegg er det overskrifter
+                    i "source controll" som gjør det mulig å lett se hva som er de siste endringene. GitHub-Desktop er en 
+                    app som gjør det mulig å lett finne frem til disse tidligere kodene, og se på endringene som er gjort før
+                    "branches" blir lagt ut.
                 </p>
             </div>
             <div class="split-right">
-                <h2>Subheading 3:</h2>
-                <h3>Text:</h3>
+                <h2>subheading 3:</h2>
+                <h3>text</h3>
                 <hr class="separator">
                 <h2>Subheading 4:</h2>
                 <h3>Text:</h3>
